alignment issue fixed

--- a/src/app/pages/insight-configuration/action-insight-configuration/action-insight-configuration.component.scss
+++ b/src/app/pages/insight-configuration/action-insight-configuration/action-insight-configuration.component.scss
@@ -48,4 +48,9 @@
     padding-right: 1rem;
     background-color: #050606;
   }
+
+  .contentCenter {
+    display: inline-grid;
+    align-items: center;
+  }
 }
